# trekr

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
artifacts/reviews/: ui-findings.md
artifacts/screenshots/: manifest.json
docs/: architecture.md  current-mappings.md  direct-ui-mapping-mode-spec.md  feature-spec-mapping-discoverability.md  feature-spec-midi-manipulation.md  feature-spec-stacked-recordings.md  handoff-summary.md  implementation-plan.md  product-spec.md  recording-clarification-sheet.md
native/: link_bridge.cpp  link_bridge.hpp
scripts/: analyze-pi-output-camera-clip.ps1  build-rpi-zero-2w.ps1  capture-pi-output-camera-clip.ps1  capture-pi-output-camera.ps1  capture-ui-screens.ps1  deploy-rpi-zero-2w.ps1  launch-rpi-zero-2w.sh  pi-camera-debug.example.psd1  pi-output-camera-review-prompt.md  review-pi-output-camera.ps1  review-ui-screens.ps1  rpi-deploy.example.psd1  run-pi-output-camera-review.ps1  run-ui-review.ps1  setup-rpi-zero-2w-runtime.sh  ui-review-prompt.md
src/: actions.rs  app.rs  cli.rs  engine.rs  lib.rs  link.rs  main.rs  mapping.rs  midi_io.rs  pages.rs  project.rs  render.rs  routing.rs  state.rs  timeline.rs  transport.rs  ui.rs
state-fixtures/: ui-looped.json
xtask/src/: main.rs
~/dev/trekr/artifacts/state/: mpc-base.json
