[package]
name = "trekr"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["png"] }
midir = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sdl3 = { version = "0.17.3", features = ["build-from-source"] }

[target.'cfg(not(windows))'.dependencies]
ableton-link = "0.1.0"
