[package]
name = "trekr"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["png"] }
midir = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sdl3 = { version = "0.17.3", features = ["build-from-source"] }

[build-dependencies]
cc = "1.2.28"
